Update img link in index.html

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ To completely reset the form and remove all the form elements:<br>
 <i class="fa  fa-chevron-right"></i> Select the <strong><em>TSFormTranslator &gt; Clear form</em></strong> menu option.<br>
 <br>
 
-<img src="img/english.png" alt="live form"><br>
+<img src="img/clear.png" alt="live form"><br>
 <br>
 
 <p class="red"><em><i class="fa fa-exclamation-circle"></i> <strong>CAUTION:</strong>  This will clear ALL form elements from the form. Use with care!</em></p>
@@ -433,7 +433,7 @@ To completely reset the form and remove all the form elements:<br>
 	<hr>
     
 	    <p>&copy; 2014 <a href="https://techstreams.github.io" target="_blank">Laura Taylor</a>&nbsp;&nbsp;|&nbsp;&nbsp;Released under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache License, Version 2.0</a></p> 
-        <p class="smaller">Documentation:  Built with <a href="http://harpjs.com" target="_blank">Harp</a>.&nbsp;&nbsp;|&nbsp;&nbsp;Hosted on <a href="https://pages.github.com/" target="_blank">Github Pages</a>.<br><em>Last Updated: Fri Oct 17 2014</em></p>
+        <p class="smaller">Documentation:  Built with <a href="http://harpjs.com" target="_blank">Harp</a>.&nbsp;&nbsp;|&nbsp;&nbsp;Hosted on <a href="https://pages.github.com/" target="_blank">Github Pages</a>.<br><em>Last Updated: Sun Oct 19 2014</em></p>
 	
 </article>
 <script src="js/main.js"></script>
