--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>A nicely formatted email containing the submitted content will be sent to the <em>form owner</em> in both the <strong><em>form language</em></strong> and <strong><em>English translation</em></strong> each time a <em>form user</em> submits to the form.</p>
 <p><i class="fa fa-github"></i> <a href="https://github.com/techstreams/TSFormTranslator">Project on Github</a></p>
 <p><br>
-<span class="red"><sup><i class="fa fa-asterisk"><i class="fa fa-asterisk"></i></i></sup>  <em>If you and your form users are using a browser such as <a href="https://www.google.com/intl/en-US/chrome/browser/" target="_blank"><strong>Chrome</strong></a> (which already supports translation), you may be interested in <a href="http://techstreams.github.io/TSContactForm" target="_blank"><strong>TSContactForm</strong></a> instead.</em></span></p>
+<span class="red"><sup><i class="fa fa-asterisk"><i class="fa fa-asterisk"></i></i></sup>  <em>If you and your form users are using a browser such as <a href="https://www.google.com/intl/en-US/chrome/browser/" target="_blank"><strong>Chrome</strong></a> (which already supports translation), you may be interested in <a href="https://techstreams.github.io/TSContactForm" target="_blank"><strong>TSContactForm</strong></a> instead.</em></span></p>
 </blockquote>
 <p><br></p>
 <p><strong><em>For example, the following image shows a simple <a href="https://support.google.com/docs/topic/6063584" target="_blank">Google Form</a> created in English</em></strong></p>
@@ -194,7 +194,7 @@
 Follow these instructions to install the <strong><em>TSFormTranslator script and host form</em></strong> into your Google Drive with <strong>TSScriptCopy</strong>:<br>
 <br>
 
-<strong><i class="fa  fa-chevron-right"></i> STEP 1:</strong> Login to your <a href="http://drive.google.com/" target="_blank">Google Drive</a><br>
+<strong><i class="fa  fa-chevron-right"></i> STEP 1:</strong> Login to your <a href="https://drive.google.com/" target="_blank">Google Drive</a><br>
 <br>
 
 <strong><i class="fa  fa-chevron-right"></i> STEP 2:</strong> Click <a href="https://script.google.com/macros/s/AKfycbyvyOdWanBy-3ovr_YirIK9gNR-EYkpdYtbROPi7qgrpABO7H09/exec" target="_blank">TSScriptCopy</a> to access. <strong><em>Wait for the application to load...</em></strong><br>
