--- a/index.html
+++ b/index.html
@@ -182,69 +182,20 @@
 	    <hr class="divider">
 	    <div class="tab-content">
 	        <div id="methodtab1" class="tab active instructions" aria-labeledby="methodtab1" role="tabpanel">
-	            <h4>Method 1: Easy Install with TSScriptCopy</h4>
-<p>TSScriptCopy is an application which <strong><em>automates the process of copying files to your Google Drive.</em></strong></p>
-<p class="red"><em><i class="fa fa-exclamation-circle"></i> TSScriptCopy and its use are licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache License, Version 2.0</a></em></p>
+	            <h4>Method 1: Make a Copy of the Google Form</h4>
 
-<button><i class="fa fa-plus-circle"></i> Click for Instructions</button>
+				<p>Follow these instructions to install the <strong><em>TSFormTranslator script and host form</em></strong> into your Google Drive with <strong>TSScriptCopy</strong>:<br>
+				<br>
 
-<div id="test" class="hidden"><br>
-<hr class="divider">
+				<strong><i class="fa  fa-chevron-right"></i> STEP 1:</strong> Login to your <a href="https://drive.google.com/" target="_blank">Google Drive</a><br>
+				<br>
 
-Follow these instructions to install the <strong><em>TSFormTranslator script and host form</em></strong> into your Google Drive with <strong>TSScriptCopy</strong>:<br>
-<br>
-
-<strong><i class="fa  fa-chevron-right"></i> STEP 1:</strong> Login to your <a href="https://drive.google.com/" target="_blank">Google Drive</a><br>
-<br>
-
-<strong><i class="fa  fa-chevron-right"></i> STEP 2:</strong> Click <a href="https://script.google.com/macros/s/AKfycbyvyOdWanBy-3ovr_YirIK9gNR-EYkpdYtbROPi7qgrpABO7H09/exec" target="_blank">TSScriptCopy</a> to access. <strong><em>Wait for the application to load...</em></strong><br>
-<br>
-
-<em>(If you have not run TSScriptCopy before, you will be prompted to perform a <strong>one-time authorization</strong> to allow the application to copy scripts and host documents to your Google Drive.)</em><br>
-<br>
-
-<img src="img/auth1.png" alt="authorization">
-<br>
-<img src="img/auth2.png" alt="authorization"><br>
-<br>
-<br>
-
-<strong><i class="fa  fa-chevron-right"></i> Step 3:</strong> When the TSScriptCopy page displays in your browser, locate the <strong><em>TSFormTranslator Copy to Drive</em></strong> button and click to install<br>
-<br>
-
-<img src="img/copy.png" alt="copy"><br>
-<br>
-<br>
-
-<strong><i class="fa  fa-chevron-right"></i> Step 4:</strong> Wait for TSScriptCopy to copy the <strong>TSFormTranslator script and host form</strong> to your Google Drive. <em>The copy process may take a minute to run...</em><br>
-<br>
-
-
-<img src="img/wait.png" alt="wait"><br>
-<br>
-<br>
-
-
-<strong><i class="fa  fa-chevron-right"></i> Step 5:</strong> Access and open the <strong>TSFormTranslator host form</strong> by clicking the link in the resulting notification message.<br>
-<br>
-
-<img src="img/notification.png" alt="notification"><br>
-<br>
-
-<em>(Click the <strong>Close</strong> link to close the notification...or <strong>exist TSScriptCopy</strong> by closing the associated browser window.)</em>
-
-<br>
-<br>
-
-<strong><i class="fa  fa-chevron-right"></i> Step 6:</strong> To use the script, see the <a href="#start">Getting Started</a> section below.
-
-<br>
-<br>
-
-</div>
-
-
-
+				<strong><i class="fa  fa-chevron-right"></i> STEP 2:</strong> Click the <strong><em>Make a copy</em></strong> button 
+				<br>
+				<br>
+				<img src="img/copy.png" alt="copy"><br>
+				<br>
+				</p>
 
 	        </div>
 	 
@@ -289,7 +240,7 @@ Follow these instructions to install the <strong><em>TSFormTranslator script and
 	        <div id="steptab2" class="tab instructions" aria-labeledby="steptab2" role="tabpanel">
                 <h4>Step 2: Open the sidebar</h4>
 <p><i class="fa  fa-chevron-right"></i> Select the <strong><em>TSFormTranslator &gt; Open sidebar</em></strong> menu option.  </p>
-<p><img src="img/open.png" alt="live form">  </p>
+<p><img src="img/open1.png" alt="live form"> <img src="img/open2.png" alt="live form"> </p>
 <p class="red"><p class="red"><i class="fa fa-exclamation-circle"></i> <strong>NOTE:</strong> <em>If you have not run TSFormTranslator before, you will be prompted to perform a <strong>one-time authorization</strong> to allow the script access. Follow the prompts and click <strong>Continue</strong> and <strong>Accept</strong> to authorize.</em></p>
 
 <p><i class="fa  fa-chevron-right"></i> <em><strong>Wait for the sidebar</strong> to display...</em>  </p>
@@ -308,6 +259,7 @@ Follow these instructions to install the <strong><em>TSFormTranslator script and
     <li><span class="red"><a href="https://translate.google.com/" target="_blank">Google Translate</a> is used to translate form elements.   Some <em>English words and phrases may not translate as expected</em> in all languages.</span></li>
     <li><span class="red">Some built-in Google Form text <em>will not</em> be translated by TSFormTranslator.</span></li>
     <li><span class="red"><a href="https://support.google.com/docs/answer/141062" target="_blank">Form Page Navigation</a> <em>will no longer work</em> after form translation.</span></li>
+    <li><span class="red"><a href="https://support.google.com/docs/answer/2839737" target="_blank">Form Upload</a> is not supported.</span></li>
     <li><span class="red">Time, date and duration form field submissions will only show in English in the sent email.</span></li>
     <li><span class="red">Some languages may only be viewable in browsers such as <a href="https://www.google.com/intl/en-US/chrome/browser/" target="_blank"><strong>Chrome</strong></a>.</span></li>
 </ul>  
@@ -419,6 +371,8 @@ To completely reset the form and remove all the form elements:<br>
 </li>
 <li><p>Some translation languages may only be viewable in browsers such as <a href="https://www.google.com/intl/en-US/chrome/browser/" target="_blank">Chrome</a>.</p>
 </li>
+<li><p>The <a href="https://support.google.com/docs/answer/2839737" target="_blank"><strong><em>File Upload</em></strong></a> form element is not supported.</p>
+</li>
 <li><p><strong><em><a href="https://support.google.com/docs/answer/141062" target="_blank">Form Page Navigation</a> will no longer work</em></strong> after form translation.</p>
 </li>
 <li><p>Time, date and duration form field submissions will only show in English in the sent email.</p>
@@ -432,8 +386,8 @@ To completely reset the form and remove all the form elements:<br>
 
 	<hr>
     
-	    <p>&copy; 2014 <a href="https://techstreams.github.io" target="_blank">Laura Taylor</a>&nbsp;&nbsp;|&nbsp;&nbsp;Released under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache License, Version 2.0</a></p> 
-        <p class="smaller">Documentation:  Built with <a href="http://harpjs.com" target="_blank">Harp</a>.&nbsp;&nbsp;|&nbsp;&nbsp;Hosted on <a href="https://pages.github.com/" target="_blank">Github Pages</a>.<br><em>Last Updated: Sun Oct 19 2014</em></p>
+	    <p>&copy;&nbsp;<a href="https://techstreams.github.io" target="_blank">Laura Taylor</a>&nbsp;&nbsp;|&nbsp;&nbsp;Released under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache License, Version 2.0</a></p> 
+        <p class="smaller">Documentation:  Built with <a href="http://harpjs.com" target="_blank">Harp</a>.&nbsp;&nbsp;|&nbsp;&nbsp;Hosted on <a href="https://pages.github.com/" target="_blank">Github Pages</a>.</p>
 	
 </article>
 <script src="js/main.js"></script>
