--- a/index.html
+++ b/index.html
@@ -187,22 +187,25 @@
 				<p>Follow these instructions to install the <strong><em>TSFormTranslator script and host form</em></strong> into your Google Drive with <strong>TSScriptCopy</strong>:<br>
 				<br>
 
-				<strong><i class="fa  fa-chevron-right"></i> STEP 1:</strong> Login to your <a href="https://drive.google.com/" target="_blank">Google Drive</a><br>
+				<strong><i class="fa  fa-chevron-right"></i> STEP 1:</strong> Login to your <a href="https://drive.google.com/" target="_blank">Google Drive</a>.<br>
 				<br>
 
-				<strong><i class="fa  fa-chevron-right"></i> STEP 2:</strong> Click the <strong><em>Make a copy</em></strong> button 
+				<strong><i class="fa  fa-chevron-right"></i> STEP 2: </strong>Access the <a href="https://docs.google.com/forms/d/1-U8SXOuz9pWPZuRouX-1DNPoNvrzQLtUriqcvAcVuPI/copy" target="_blank"><strong>TSFormTranslator</strong></a> form.<br>
+				<br>
+
+				<strong><i class="fa  fa-chevron-right"></i> STEP 3:</strong> Click the <strong><em>Make a copy</em></strong> button.  <em>This will copy the form to your Google Drive.</em>
 				<br>
 				<br>
 				<img src="img/copy.png" alt="copy"><br>
 				<br>
 				</p>
-
+                <hr class="divider">  
 	        </div>
 	 
 	        <div id="methodtab2" class="tab instructions" aria-labeledby="methodtab2" role="tabpanel">
                 <h4>Method 2: Manual Installation</h4>
 <p>See the <a href="https://github.com/techstreams/TSFormTranslator" target="_blank">TSFormTranslator project on Github</a> for code and manual install instructions.</p>
-
+                <hr class="divider">  
 	        </div>
 	    </div>
 	</div>
@@ -234,6 +237,7 @@
 <li>Form Elements</li>
 <li>Confirmation message</li>
 </ul>
+<hr class="divider">  
 <p align="center"><a class="next" href="#steptab2"><strong>NEXT</strong> <i class="fa fa-angle-double-right"></i></a></p>
 	        </div>
 	 
@@ -244,6 +248,7 @@
 <p class="red"><p class="red"><i class="fa fa-exclamation-circle"></i> <strong>NOTE:</strong> <em>If you have not run TSFormTranslator before, you will be prompted to perform a <strong>one-time authorization</strong> to allow the script access. Follow the prompts and click <strong>Continue</strong> and <strong>Accept</strong> to authorize.</em></p>
 
 <p><i class="fa  fa-chevron-right"></i> <em><strong>Wait for the sidebar</strong> to display...</em>  </p>
+<hr class="divider">  
 <p align="center"><a class="prev" href="#steptab1"><i class="fa fa-angle-double-left"></i> <strong>PREV</strong></a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="next" href="#steptab3"><strong>NEXT</strong> <i class="fa fa-angle-double-right"></i></a></p>
 
 	        </div>
@@ -263,7 +268,7 @@
     <li><span class="red">Time, date and duration form field submissions will only show in English in the sent email.</span></li>
     <li><span class="red">Some languages may only be viewable in browsers such as <a href="https://www.google.com/intl/en-US/chrome/browser/" target="_blank"><strong>Chrome</strong></a>.</span></li>
 </ul>  
-
+<hr class="divider">  
 <p><br></p>
 <p align="center"><a class="prev" href="#steptab2"><i class="fa fa-angle-double-left"></i> <strong>PREV</strong></a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="next" href="#steptab4"><strong>NEXT</strong> <i class="fa fa-angle-double-right"></i></a></p>
 
@@ -275,34 +280,7 @@
 <p><img src="img/liveform.png" alt="live form">  </p>
 <p><em><strong>The form is now ready to share with others</strong>...see the <strong><a href="https://support.google.com/docs/answer/2839588" target="_blank">form sharing documentation</a></strong> for more information.</em></p>
 <hr class="divider">  
-
-<h4><i class="fa fa-exclamation-triangle"></i> GOOGLE APPS USERS</h4>
-<button><i class="fa fa-plus-circle"></i> Click for More Options</button>
-
-<div class="step hidden"> 
-
-<hr class="divider">
-
-<i class="fa  fa-chevron-right"></i> To publish the form, <strong><em>uncheck</em></strong> the <strong><em>Require login to view this form</em></strong> box under the <em>form settings</em> and click <strong>OK</strong> on the following prompt.<br>
-<br>
-
-<img src="img/publish.png" alt="live form"><br>
-<br>
-
-
-<i class="fa fa-arrow-right"></i> <em><strong>If you want to keep the form accessible only within your Google Apps domain</strong>...leave the <strong>Require login to view this form</strong> checked under the form settings</em><br>
-<br>
-
-<img src="img/requirelogin.png" alt="live form"><br>
-<br>
-
-
-<i class="fa fa-arrow-right"></i> <em><strong>If you want to keep the form accessible only within your Google Apps domain AND collect the respondent’s username</strong>...check the <strong>Automatically collect respondent’s username</strong> box under the form settings. The form submission email will contain the respondent’s username in addition to the form submission content.</em><br>
-<br>
-
-<img src="img/autocollect.png" alt="live form"> 
-
-</div> 
+ 
 
 <p align="center"><a class="prev" href="#steptab3"><i class="fa fa-angle-double-left"></i> <strong>PREV</strong></a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="next" href="#steptab5"><strong>NEXT</strong> <i class="fa fa-angle-double-right"></i></a></p>
 
@@ -356,6 +334,8 @@ To completely reset the form and remove all the form elements:<br>
 
 </div> 
 
+<hr class="divider">  
+
 <p align="center"><a class="prev" href="#steptab4"><i class="fa fa-angle-double-left"></i> <strong>PREV</strong></a></p>
 
 	        </div>
@@ -387,7 +367,6 @@ To completely reset the form and remove all the form elements:<br>
 	<hr>
     
 	    <p>&copy;&nbsp;<a href="https://techstreams.github.io" target="_blank">Laura Taylor</a>&nbsp;&nbsp;|&nbsp;&nbsp;Released under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache License, Version 2.0</a></p> 
-        <p class="smaller">Documentation:  Built with <a href="http://harpjs.com" target="_blank">Harp</a>.&nbsp;&nbsp;|&nbsp;&nbsp;Hosted on <a href="https://pages.github.com/" target="_blank">Github Pages</a>.</p>
 	
 </article>
 <script src="js/main.js"></script>
