--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 	        <div id="methodtab1" class="tab active instructions" aria-labeledby="methodtab1" role="tabpanel">
 	            <h4>Method 1: Make a Copy of the Google Form</h4>
 
-				<p>Follow these instructions to install the <strong><em>TSFormTranslator script and host form</em></strong> into your Google Drive with <strong>TSScriptCopy</strong>:<br>
+				<p>Follow these instructions to install the <strong><em>TSFormTranslator script and host form</em></strong> into your Google Drive:<br>
 				<br>
 
 				<strong><i class="fa  fa-chevron-right"></i> STEP 1:</strong> Login to your <a href="https://drive.google.com/" target="_blank">Google Drive</a>.<br>
