--- a/index.html
+++ b/index.html
@@ -170,19 +170,15 @@
 
 	<p><a id="install" name="install" href="#"></a></p>
 <h2><i class="fa fa-wrench"></i> Installation</h2>
-<blockquote>
-<p>There are <strong><em>two methods</em></strong> available for installing <em>TSFormTranslator</em>.  </p>
-</blockquote>
 
 	<div class="tabs">
 	    <ul class="tab-links" role="tablist">
-	        <li class="active" aria-controls="panel1" role="tab"><a href="#methodtab1"><i class="fa fa-dot-circle-o"></i> Method 1</a></li>
-	        <li aria-controls="panel2" role="tab"><a href="#methodtab2"><i class="fa fa-dot-circle-o"></i> Method 2</a></li>
+	        <li class="active" aria-controls="panel1" role="tab"><a href="#methodtab1"><i class="fa fa-dot-circle-o"></i> Install</a></li>
 	    </ul>
 	    <hr class="divider">
 	    <div class="tab-content">
 	        <div id="methodtab1" class="tab active instructions" aria-labeledby="methodtab1" role="tabpanel">
-	            <h4>Method 1: Make a Copy of the Google Form</h4>
+	            <h4>Make a Copy of the Google Form</h4>
 
 				<p>Follow these instructions to install the <strong><em>TSFormTranslator script and host form</em></strong> into your Google Drive:<br>
 				<br>
@@ -202,11 +198,6 @@
                 <hr class="divider">  
 	        </div>
 	 
-	        <div id="methodtab2" class="tab instructions" aria-labeledby="methodtab2" role="tabpanel">
-                <h4>Method 2: Manual Installation</h4>
-<p>See the <a href="https://github.com/techstreams/TSFormTranslator" target="_blank">TSFormTranslator project on Github</a> for code and manual install instructions.</p>
-                <hr class="divider">  
-	        </div>
 	    </div>
 	</div>
 	<hr>
