--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 				<strong><i class="fa  fa-chevron-right"></i> STEP 1:</strong> Login to your <a href="https://drive.google.com/" target="_blank">Google Drive</a>.<br>
 				<br>
 
-				<strong><i class="fa  fa-chevron-right"></i> STEP 2: </strong>Access the <a href="https://techstreams.page.link/TSFormTranslator" target="_blank"><strong>TSFormTranslator</strong></a> form.<br>
+				<strong><i class="fa  fa-chevron-right"></i> STEP 2: </strong>Access the <a href="https://docs.google.com/forms/d/1yd_DJeQfCRurB4aw-0d9wDO-k2ceowz48oUhgYzYmc4/template/preview" target="_blank"><strong>TSFormTranslator</strong></a> form.<br>
 				<br>
 
 				<strong><i class="fa  fa-chevron-right"></i> STEP 3:</strong> Click the <strong><em>Use Template</em></strong> button.  <em>This will copy the form to your Google Drive.</em>
